--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
 
         <div class="d-flex justify-content-center" >
-            <button id="go" type="button" class="btn btn-primary">スーパーファミコン</button>
-            <button id="roku" type="button" class="ml-1 btn btn-primary">プレーステーション２</button>
-            <button id="nana" type="button" class="ml-1 btn btn-primary">ニンテンドースイッチ</button>
-            <button id="hati" type="button" class="ml-1 btn btn-primary">ニンテンドーDS</button>
+            <button id="go" type="button" class="btn btn-primary" onClick="sound()">スーパーファミコン</button>
+            <button id="roku" type="button" class="ml-1 btn btn-primary" onClick="sound2()">プレーステーション２</button>
+            <button id="nana" type="button" class="ml-1 btn btn-primary" onClick="sound()">ニンテンドースイッチ</button>
+            <button id="hati" type="button" class="ml-1 btn btn-primary" onClick="sound()">ニンテンドーDS</button>
             
         </div>
         <div class="seigohanntei">正誤判定</div>
