--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         </div>
 
         <div id="js-question2" class="mt-3 alert alert-primary" role="alert">
-            ゲーム市場、最も売れたゲーム機は次のうちどれ？
+            世界で安全な水を使えない人々は何人？
         </div>
 
         <div class="d-flex justify-content-center" >
-            <button id="go" type="button" class="btn btn-primary" onClick="sound()">スーパーファミコン</button>
-            <button id="roku" type="button" class="ml-1 btn btn-primary" onClick="sound2()">プレーステーション２</button>
-            <button id="nana" type="button" class="ml-1 btn btn-primary" onClick="sound()">ニンテンドースイッチ</button>
-            <button id="hati" type="button" class="ml-1 btn btn-primary" onClick="sound()">ニンテンドーDS</button>
+            <button id="go" type="button" class="btn btn-primary" onClick="sound2()">6億6300万人</button>
+            <button id="roku" type="button" class="ml-1 btn btn-primary" onClick="sound()">1000人</button>
+            <button id="nana" type="button" class="ml-1 btn btn-primary" onClick="sound()">7億570万人</button>
+            <button id="hati" type="button" class="ml-1 btn btn-primary" onClick="sound()">1兆人</button>
             
         </div>
     </div>
